Reorganized admin layout.
Views rendered within this layout can assume the presence of
the #side-panel, #control-panel and #data-panel..

Layout files for other roles would most probably be along the
same lines as this one

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -1,4 +1,17 @@
 
+- content_for :hidden_stuff do 
+  #admin-forms.hidden
+    = render :partial => 'yardsticks/new'
+    = render :partial => 'boards/new'
+
+  #misc-stuff.hidden
+    = render :partial => 'shared/ajax_responses'
+    = render :partial => 'courses/new'
+  
+  #controls.hidden 
+    = render :partial => 'boards/controls'
+    = render :partial => 'courses/controls'
+
 !!!5
 
 %html{html_attrs}
@@ -12,6 +25,8 @@
       #side-panel.vertical.left
         = render :partial => 'admin/sidepanel'
       #results-and-outputs.left.greedy 
-        = yield
+        #control-panel.action-panel.horizontal
+        #data-panel
+          = yield
 
     = yield :hidden_stuff
