--- a/webapp/app/views/boards/_controls.html.haml
+++ b/webapp/app/views/boards/_controls.html.haml
@@ -1,4 +1,4 @@
 
-#board-controls.left.greedyi.top-panel-controls
-  %a#add-board-link.sub-link= "Add"
-  %a#edit-board-link.sub-link= "Edit"
+#board-controls.left.top-panel-controls
+  %a#add-board-link.sub-link.left{ :href => '#' }= "Add"
+  %a#edit-board-link.sub-link.left{ :href => '#' }= "Edit"
