--- a/webapp/app/views/boards/_list.html.haml
+++ b/webapp/app/views/boards/_list.html.haml
@@ -1,8 +1,7 @@
 
 - boards = Board.all 
 
-#courses-console.slideable.greedy.left
-  #top-panel.action-panel.horizontal
+#courses-console.greedy.left
   #board-list.action-panel.vertical.left.transparent
     - boards.each do |board| 
       .radio-button
