--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -12,6 +12,9 @@
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
 
+  #tables.hidden
+    = render :partial => 'boards/summary'
+
 !!!5
 
 %html{html_attrs}
