--- a/webapp/app/views/admin/_sidepanel.html.haml
+++ b/webapp/app/views/admin/_sidepanel.html.haml
@@ -1,12 +1,23 @@
 
+-# For each side-link, specify the href and the controls & default data-table 
+-# to load on click. The tables are identified by their IDs. So, make sure that
+-# wherever they are defined (most probably in some partial), they are given 
+-# distinct names
+
+-# Example : 
+-# <li href='#' id="boards_link" class="main-link" load_table="#boards-summary" load_controls="#boards_control">Boards</li>
 
 - if current_account 
   - links = {:logout => {:href => '/logout'} }
 - else 
   - links = {:login => {:href => '/login'} }
 
-- otherlinks = { :boards => {:href => '#', :load_controls => '#board-controls'}, 
-                 :courses => {:href => '#', :load_controls => '#course-controls'} }
+- otherlinks = { :boards => {:href => '#', 
+                             :load_controls => '#board-controls', 
+                             :load_table => '#boards-summary'}, 
+                 :courses => {:href => '#', 
+                              :load_controls => '#course-controls', 
+                              :load_table => '#courses-summary'} }
 - links.merge! otherlinks 
 
 %ul
@@ -14,9 +25,22 @@
     - main = k.to_s 
     - href = v[:href].nil? || v[:href].empty? ? '#' : v[:href] 
     - controls = v[:load_controls] 
+    - table = v[:load_table]
 
     %li{ :id => "#{main}_link", :class => "main-link" }
+  This file contains functions that get bound to objects created on-the-fly. 
+  Such objects will have no bindings right after creation. The only way
+  then is to call .bind() on the newly created object explicitly
+
+  Any bindings that can be applied on document loading should be placed in 
+  'onload.js' only
       - if controls.nil? 
-        %a{ :href => "#{href}"}= "#{main.humanize}"
+        - if table.nil? 
+          %a{ :href => "#{href}"}= "#{main.humanize}"
+        - else 
+          %a{ :href => "#{href}", :load_table => "#{table}"}= "#{main.humanize}"
       - else 
-        %a{ :href => "#{href}", :load_on_click => "#{controls}" }= "#{main.humanize}"
+        - if table.nil? 
+          %a{ :href => "#{href}", :load_on_click => "#{controls}" }= "#{main.humanize}"
+        - else 
+          %a{ :href => "#{href}", :load_on_click => "#{controls}", :load_table => "#{table}"}= "#{main.humanize}"
