--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -11,9 +11,11 @@
   #controls.hidden 
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
+    = render :partial => 'schools/controls'
 
   #tables.hidden
     = render :partial => 'boards/summary'
+    = render :partial => 'schools/summary'
 
 !!!5
 
