--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -3,11 +3,8 @@
   #admin-forms.hidden
     = render :partial => 'yardsticks/new'
     = render :partial => 'boards/new'
+    = render :partial => 'schools/new'
 
-  #misc-stuff.hidden
-    = render :partial => 'shared/ajax_responses'
-    = render :partial => 'courses/new'
-  
   #controls.hidden 
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
