--- a/webapp/app/views/schools/_new.html.haml
+++ b/webapp/app/views/schools/_new.html.haml
@@ -7,7 +7,9 @@
       = f.input :city
       = f.input :state, :as => :select, :collection => ['DL', 'MH', 'HR','PB','RJ']
       = f.input :zip_code 
-      = f.input :phone_number, :label => 'Phone #'
+      = f.input :phone, :label => 'Phone #'
+      = semantic_fields_for :account do |a| 
+        = f.input :email, :hint => "Will be used for logging in"
 
     .submit-buttons
       %input{:type => :submit, :role => :button, :value => "Create", :name => "commit"}
