--- a/webapp/app/views/schools/_summary.html.haml
+++ b/webapp/app/views/schools/_summary.html.haml
@@ -1,5 +1,6 @@
 
-- columns = { :school => :regular, :address => :wide, :zip_code => :narrow, :phone => :narrow, :board => :regular}
+- columns = { :school => :regular, :address => :wide, :zip_code => :narrow, 
+              :phone => :narrow, :board => :regular, :email => :regular}
 
 #schools-summary.left
   .table 
