--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -137,6 +137,22 @@ li.sub-link, .sublink {
   min-height : 20px ;
 } 
 
+/* Not sure about the settings below
+.table .row { 
+  margin-top : 5px ;
+  padding-top : 2px ; 
+  padding-bottom : 2px ;
+  -moz-border-radius : 4px ;
+  border-radius : 4px ;
+} 
+*/
+
+.table .headings { 
+  margin-bottom : 13px ;
+  padding-bottom : 4px ;
+  border-bottom : 3px solid gray ;
+} 
+
 .row .data { 
   float : left ;
 } 
@@ -149,9 +165,9 @@ li.sub-link, .sublink {
   margin-left : 30px ;
 } 
 
-.color { 
-  background-color: #654b24 ;
+.colored { 
   color : #654b24 ;
+  font-weight : bold ;
 } 
 
 td { 
@@ -178,7 +194,7 @@ td {
   float : left ; 
   font-size : 14px ; 
   text-align : center ; 
-  margin-top : 5px ;
+  /* margin-top : 5px ; */
 } 
 
 /*
