[admin] Added ability to edit a school..
There might be some minor bugs.. Will resolve them soon

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -4,6 +4,7 @@
     = render :partial => 'yardsticks/new'
     = render :partial => 'boards/new'
     = render :partial => 'schools/new'
+    = render :partial => 'schools/edit'
 
   #controls.hidden 
     = render :partial => 'boards/controls'
