Yardsticks in admin console ...

--- a/webapp/app/views/admin/_sidepanel.html.haml
+++ b/webapp/app/views/admin/_sidepanel.html.haml
@@ -20,7 +20,10 @@
                               :load_table => '#courses-summary'},
                  :schools => {:href => '#', 
                               :load_controls => "#school-controls", 
-                              :load_table => '#schools-summary'} }
+                              :load_table => '#schools-summary'}, 
+                 :yardsticks => {:href => '#', 
+                                 :load_controls => '#yardstick-controls',
+                                 :load_table => '#yardsticks-summary'} }
 - links.merge! otherlinks 
 
 %ul
