--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -5,15 +5,18 @@
     = render :partial => 'boards/new'
     = render :partial => 'schools/new'
     = render :partial => 'schools/edit'
+    = render :partial => 'yardsticks/edit'
 
   #controls.hidden 
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
     = render :partial => 'schools/controls'
+    = render :partial => 'yardsticks/controls'
 
   #tables.hidden
     = render :partial => 'boards/summary'
     = render :partial => 'schools/summary'
+    = render :partial => 'yardsticks/summary'
 
 !!!5
 
