Made space in summary table by removing column for school boards

--- a/webapp/app/views/schools/_summary.html.haml
+++ b/webapp/app/views/schools/_summary.html.haml
@@ -1,6 +1,6 @@
 
 - columns = { :notitle => :radio, :school => :regular, :address => :wide, :zip_code => :narrow, 
-              :phone => :narrow, :board => :regular, :email => :regular}
+              :phone => :narrow, :email => :regular}
 
 #schools-summary.left
   .table 
