Added 'overflow' class attribute for columns that could get potentially wide...

--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -173,6 +173,10 @@ p {
   font-weight : bold ;
 } 
 
+.small, .cell.small { 
+  font-size : 13px ;
+} 
+
 td { 
   padding : 0px ;
 } 
@@ -242,3 +246,6 @@ td {
   background-color : white ; 
 } 
 
+.overflow {
+  overflow-x : hidden ;
+} 
