First steps towards developing a "toolbox" ...
The idea is to have small, reusable HTML elements ready to be picked, customized
and then embedded wherever needed on a console page (in JS)

For example, one might want a drop-down box with the list of school-boards
in some search box somewhere. if the search box is pre-rendered, then all that
one needs to do is clone it in JS and embed the clone where needed

That's the idea behind toolbox anyway...

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -17,6 +17,12 @@
     = render :partial => 'boards/summary'
     = render :partial => 'schools/summary'
     = render :partial => 'yardsticks/summary'
+  
+  #toolbox.hidden
+    = render :partial => 'toolbox/board_select'
+    = render :partial => 'toolbox/difficulty_select'
+    = render :partial => 'toolbox/class_select'
+    = render :partial => 'toolbox/search_button'
 
 !!!5
 
@@ -32,6 +38,7 @@
         = render :partial => 'admin/sidepanel'
       #results-and-outputs.left.greedy 
         #control-panel.action-panel.horizontal
+          #search-box.right
         #data-panel
           = yield
 
