--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -17,6 +17,7 @@ body {
   color : #fd9105 ;
 } 
 
+/*
 .accordion-heading { 
     font-size : 14px ;
     font-variant : small-caps ; 
@@ -48,6 +49,7 @@ p {
 .ui-accordion .ui-accordion-header a.small-font {
     font-size : 13px ;
 } 
+*/
 
 .submit-buttons { 
    margin-top : 7px ;
@@ -71,9 +73,12 @@ p {
 
 .main-link, .sub-link {
   text-decoration : none ;
-  list-style-type : none ;
   text-transform : lowercase ;
   color : white ;
+} 
+
+.no-bullets { 
+  list-style-type : none ;
 } 
 
 .main-link { 
