Added a helper method to create drop down menus...
Hence, do not require the toolbox folder or the partial files therein.

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -19,10 +19,9 @@
     = render :partial => 'yardsticks/summary'
   
   #toolbox.hidden
-    = render :partial => 'toolbox/board_select'
-    = render :partial => 'toolbox/difficulty_select'
-    = render :partial => 'toolbox/class_select'
-    = render :partial => 'toolbox/search_button'
+    = drop_down_menu_for :boards 
+    = drop_down_menu_for :difficulty 
+    = drop_down_menu_for :classes 
 
 !!!5
 
