First attempt at adding drop-down menus to a control panel...
It looks fine... But my guess is that all elements needed to perform
a search should be within a form that has a submit button.
That's what I need to test and do next

--- a/webapp/app/views/courses/_controls.html.haml
+++ b/webapp/app/views/courses/_controls.html.haml
@@ -1,3 +1,6 @@
 
 #course-controls.left.top-panel-controls
   %a#edit-course-link.sub-link= "Edit"
+  = drop_down_menu_for :subjects
+  = drop_down_menu_for :boards
+  = drop_down_menu_for :classes
