--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -71,13 +71,13 @@ p {
   padding-left : 25px ;
 } 
 
-.main-link, .sub-link {
+.main-link, .sub-link, .dropdown label {
   text-decoration : none ;
   text-transform : lowercase ;
   color : white ;
 } 
 
-.no-bullets { 
+.no-bullets, .dropdown { 
   list-style-type : none ;
 } 
 
@@ -90,9 +90,19 @@ p {
   margin-right : 15px ;
 } 
 
-.sub-link {
+.sub-link { 
   font-size : 14px ;
   text-align : center ;
+} 
+
+.dropdown label { 
+  font-size : 12px ;
+  text-align : left ; 
+  margin-right : 4px ;
+}
+
+.dropdown select { 
+  margin-right : 8px ;
 } 
 
 #side-panel {
