Added table header for courses-summary

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -17,6 +17,7 @@
     = render :partial => 'boards/summary'
     = render :partial => 'schools/summary'
     = render :partial => 'yardsticks/summary'
+    = render :partial => 'courses/summary'
   
 !!!5
 
