Initial commit of search box for Courses in the Admin console...
What's done here should be a template for implementing inline, horizontal
search forms in the #control-panel.

The controller action does nothing yet. Wait for next commit...

--- a/webapp/app/views/courses/_controls.html.haml
+++ b/webapp/app/views/courses/_controls.html.haml
@@ -1,6 +1,8 @@
 
 #course-controls.left.top-panel-controls
   %a#edit-course-link.sub-link= "Edit"
-  = drop_down_menu_for :subjects
-  = drop_down_menu_for :boards
-  = drop_down_menu_for :classes
+  = form_tag courses_search_path, :method => :get, :remote => true, :class => 'right' do |f| 
+    = drop_down_menu_for :subjects
+    = drop_down_menu_for :boards
+    = drop_down_menu_for :classes
+    = submit_tag 'Search'
