Summary tables given an additional class sttribute - summary-table...
This class attribute is required to bind ajaxSuccess() to all summary tables.

Thing is that there can be multiple events that eventually need to
update a summary-table. And these events are bound to different DOM elements.
And so, rather than tie the updation logic to the DOM element, it makes
sense to tie the logic to the summary table itself.

--- a/webapp/app/views/boards/_summary.html.haml
+++ b/webapp/app/views/boards/_summary.html.haml
@@ -2,7 +2,7 @@
 - columns = { :board => :regular, :subject => :regular, :grade_9 => :narrow,
               :grade_10 => :narrow, :grade_11 => :narrow, :grade_12 => :narrow}
 
-#boards-summary.left
+#boards-summary.summary-table.left
   .table 
     .headings 
       .row 
