--- a/webapp/app/views/courses/_summary.html.haml
+++ b/webapp/app/views/courses/_summary.html.haml
@@ -1,7 +1,7 @@
 
 - columns = {:notitle => :radio, :course => :wide, :board => :narrow, :class => :narrow, :difficulty => :narrow}
 
-#courses-summary.left
+#courses-summary.summary-table.left
   .table 
     .headings 
       .row 
