--- a/webapp/app/views/schools/_summary.html.haml
+++ b/webapp/app/views/schools/_summary.html.haml
@@ -2,7 +2,7 @@
 - columns = { :notitle => :radio, :school => :regular, :address => :wide, :zip_code => :narrow, 
               :phone => :narrow, :email => :regular}
 
-#schools-summary.left
+#schools-summary.summary-table.left
   .table 
     .headings 
       .row 
