--- a/webapp/app/views/yardsticks/_summary.html.haml
+++ b/webapp/app/views/yardsticks/_summary.html.haml
@@ -1,7 +1,7 @@
 
 - columns = { :notitle => :radio, :state => :regular, :description => :wide, :mcq => :narrow, :subpart => :narrow }
 
-#yardsticks-summary.left
+#yardsticks-summary.summary-table.left
   .table 
     .headings 
       .row 
