[showcase] Ability to search for schools by state added
Its all coming together in this one - helper methods for drop-downs,
ActiveRecord queries using scope and attaching of AJAX event listeners
on a smaller set of elements.

However, right now, the results of search are simply getting appended
to existing table. Need to clear the table first

--- a/webapp/app/views/schools/_controls.html.haml
+++ b/webapp/app/views/schools/_controls.html.haml
@@ -2,3 +2,7 @@
 #school-controls.left.top-panel-controls
   %a#add-school-link.sub-link.left{ :href => '#' }= "Add"
   %a#edit-school-link.sub-link.left{ :href => '#' }= "Edit"
+  %a#view-teachers-link.sub-link.left{ :href => '#' }= "Teachers"
+  = form_tag schools_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
+    = drop_down_menu_for :states
+    = submit_tag 'Search'
