[Admin] : Ability to add a new course added...
Next : Display list of current courses in the console

--- a/webapp/app/views/courses/_controls.html.haml
+++ b/webapp/app/views/courses/_controls.html.haml
@@ -1,5 +1,6 @@
 
 #course-controls.left.top-panel-controls
+  %a#add-course-link.sub-link= "Add"
   %a#edit-course-link.sub-link= "Edit"
   = form_tag courses_search_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :subjects
