--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -6,6 +6,7 @@
     = render :partial => 'schools/new'
     = render :partial => 'schools/edit'
     = render :partial => 'yardsticks/edit'
+    = render :partial => 'courses/new'
 
   #controls.hidden 
     = render :partial => 'boards/controls'
