--- a/webapp/app/views/courses/_controls.html.haml
+++ b/webapp/app/views/courses/_controls.html.haml
@@ -2,7 +2,7 @@
 #course-controls.left.top-panel-controls
   %a#add-course-link.sub-link= "Add"
   %a#edit-course-link.sub-link= "Edit"
-  = form_tag courses_search_path, :method => :get, :remote => true, :class => 'right' do |f| 
+  = form_tag courses_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :subjects
     = drop_down_menu_for :boards
     = drop_down_menu_for :classes
