Added search functionality for courses ...
Note to self : Change grade column in Course to klass.
Grade is already a model with totally different connotations.
And we can't use the word 'class' in the way its normally understood in
schools because 'class' is a reserved word in many programming languages.
Hence, any code using it will either not run or behave funny

--- a/webapp/app/views/courses/_controls.html.haml
+++ b/webapp/app/views/courses/_controls.html.haml
@@ -5,5 +5,5 @@
   = form_tag courses_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :subjects
     = drop_down_menu_for :boards
-    = drop_down_menu_for :classes
+    = drop_down_menu_for :klasses
     = submit_tag 'Search'
