Phone column is now of regular width and email is now wide..
Previously, they were narrow and regular respectively. Both have been
moved up one notch in width ..

--- a/webapp/app/views/schools/_summary.html.haml
+++ b/webapp/app/views/schools/_summary.html.haml
@@ -1,6 +1,6 @@
 
 - columns = { :notitle => :radio, :school => :regular, :address => :wide, :zip_code => :narrow, 
-              :phone => :narrow, :email => :regular}
+              :phone => :regular, :email => :wide}
 
 #schools-summary.summary-table.left
   .table 
