--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -7,6 +7,7 @@
     = render :partial => 'schools/edit'
     = render :partial => 'yardsticks/edit'
     = render :partial => 'courses/new'
+    = render :partial => 'courses/edit'
 
   #controls.hidden 
     = render :partial => 'boards/controls'
