Added a course details link to the control panel...
Clicking on this link would load Course -> Specific Topic mapping
for editing / viewing

--- a/webapp/app/views/courses/_controls.html.haml
+++ b/webapp/app/views/courses/_controls.html.haml
@@ -2,6 +2,7 @@
 #course-controls.left.top-panel-controls
   %a#add-course-link.sub-link= "Add"
   %a#edit-course-link.sub-link= "Edit"
+  %a#course-details-link.sub-link= "Details"
   = form_tag courses_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :subjects
     = drop_down_menu_for :boards
