--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -20,6 +20,7 @@
     = render :partial => 'schools/summary'
     = render :partial => 'yardsticks/summary'
     = render :partial => 'courses/summary'
+    = render :partial => 'courses/syllabus'
   
 !!!5
 
