Option to add a new topic presented both in #course-controls & #topic-controls..
The invoking link has the same id in both control panels. However, only
one panel would be visibile at a time. Hence, there should not be a problem
with having the same JS for both.

--- a/webapp/app/views/courses/_controls.html.haml
+++ b/webapp/app/views/courses/_controls.html.haml
@@ -3,6 +3,7 @@
   %a#add-course-link.sub-link= "Add"
   %a#edit-course-link.sub-link= "Edit"
   %a#edit-syllabus-link.sub-link= "Syllabus"
+  %a#add-topic-link.sub-link= "New Topic"
   = form_tag courses_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :subjects
     = drop_down_menu_for :boards
