--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -8,12 +8,14 @@
     = render :partial => 'yardsticks/edit'
     = render :partial => 'courses/new'
     = render :partial => 'courses/edit'
+    = render :partial => 'topics/new'
 
   #controls.hidden 
     = render :partial => 'boards/controls'
     = render :partial => 'courses/controls'
     = render :partial => 'schools/controls'
     = render :partial => 'yardsticks/controls'
+    = render :partial => 'topics/controls'
 
   #tables.hidden
     = render :partial => 'boards/summary'
