--- a/webapp/app/views/topics/_new.html.haml
+++ b/webapp/app/views/topics/_new.html.haml
@@ -4,7 +4,7 @@
     = f.inputs do 
       = f.input :name 
       = f.input :broad_topic_id, :label => 'Category', :as => :select, 
-                                 :collection => BroadTopic.all 
+                                 :collection => BroadTopic.all, :include_blank => false
       = f.input :broad_topic_new, :label => nil, 
                                   :hint => 'Create a new category if none of the above apply'
     .submit-buttons
