--- a/webapp/app/views/topics/_new.html.haml
+++ b/webapp/app/views/topics/_new.html.haml
@@ -3,9 +3,8 @@
   = semantic_form_for :topic, :remote => true do |f| 
     = f.inputs do 
       = f.input :name 
-      = f.input :broad_topic_id, :label => 'Category', :as => :select, 
-                                 :collection => BroadTopic.all, :include_blank => false
-      = f.input :broad_topic_new, :label => nil, 
-                                  :hint => 'Create a new category if none of the above apply'
+      = f.input :category, :label => 'Category', :as => :select, 
+                           :collection => BroadTopic.all
+      = f.input :new_category, :hint => 'Create a new category if none of the above apply'
     .submit-buttons
       %input{:type => :submit, :role => :button, :value => "Add", :name => "commit"}
