[NeXT Step] : Initial framework for editing sylllabi added ...
The framework includes a "mega" table in which specific topics are listed
under broad topics. A specific topic can be selected using the checkbox
alongside it. And for the course in question, the target difficulty level
can also be set for that specific topic

The plan is that instead of doing one big form submission, ping the
server each time a checkbox is checked / unchecked OR the difficulty
level is changed.

As it is, defining syllabi will never be an everyday task. At most,
once a year

--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -111,6 +111,7 @@ p {
   background-color : #654b24 ;
   -moz-border-radius : 5px ;
   border-radius : 5px ;
+  min-height : 400px ;
 } 
 
 #side-panel a {
@@ -119,6 +120,10 @@ p {
   /*margin-left : 20px ;
   line-height : 5 ;
   padding-bottom : 4px ;*/
+} 
+
+#side-panel li:not(id='login-anchor') {
+  margin-bottom : 20px ;
 } 
 
 #side-panel a.first-element {
@@ -259,4 +264,10 @@ td {
 
 .overflow {
   overflow-x : hidden ;
+} 
+
+.mapping .column > div {
+  width : 100% ;
+  float : none ;
+  min-height : 30px ;
 } 
