--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -23,6 +23,7 @@
     = render :partial => 'yardsticks/summary'
     = render :partial => 'courses/summary'
     = render :partial => 'courses/syllabus'
+    = render :partial => 'syllabi/edit'
   
 !!!5
 
