:include_blank option supported in dropdown_menu_for ..
Plus, drop-downs in #edit-syllabi-megatable don't have blanks

--- a/webapp/app/views/syllabi/_edit.html.haml
+++ b/webapp/app/views/syllabi/_edit.html.haml
@@ -34,6 +34,7 @@
         %div{ :marker => "#{topic.id}" } 
           = nofrills_checkbox
           .label.small.left= "#{topic.name}"
-          = drop_down_menu_for :difficulty, :float => :right, :disabled => true
+          = drop_down_menu_for :difficulty, :float => :right, :disabled => true,
+                               :include_blank => false
   #first.column.left 
   #second.column.left
