Minor styling changes in #edit-syllabi-megatable

--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -275,3 +275,7 @@ td {
 .mapping .column > div > div { 
   vertical-align : middle ;
 } 
+
+#edit-syllabi-megatable input[type='submit'] { 
+  margin-bottom : 20px ;
+} 
