--- a/webapp/app/views/syllabi/_edit.html.haml
+++ b/webapp/app/views/syllabi/_edit.html.haml
@@ -20,7 +20,7 @@
 
 - categories = BroadTopic.order(:name).all 
 
-#edit-syllabi-megatable.mapping.form
+#edit-syllabi-megaform.mega-form
   = form_tag '/syllabus', :method => :put, :remote => true do |f| 
     = submit_tag "Update"
     = tag(:input, :name => 'syllabi[course_id]', :class => 'hidden')
