New layout for simultaneous editing of Yardsticks

--- a/webapp/app/views/layouts/admin.html.haml
+++ b/webapp/app/views/layouts/admin.html.haml
@@ -20,10 +20,10 @@
   #tables.hidden
     = render :partial => 'boards/summary'
     = render :partial => 'schools/summary'
-    = render :partial => 'yardsticks/summary'
     = render :partial => 'courses/summary'
     = render :partial => 'courses/syllabus'
     = render :partial => 'syllabi/edit'
+    = render :partial => 'yardsticks/simedit'
   
 !!!5
 
